
[package]
name = "solo-poc-de-wcf-runtime"
description = "proof of concept for working capital financing runtime."
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# External dependencies
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true , "branch" = "polkadot-v0.9.37" }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true , "branch" = "polkadot-v0.9.37" }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true , "branch" = "polkadot-v0.9.37" }

pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }

# depends on frame_system
#used by frame_system
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }

#depends on aura
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }

#depends on balances
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }

#dependence for pallet_contract
pallet-assets = { git = "https://github.com/paritytech/substrate", package = "pallet-assets", default-features = false, branch = "polkadot-v0.9.37" }
pallet-assets-chain-extension = { git = "https://github.com/727-Ventures/pallet-assets-chain-extension", default-features = false, features = ["substrate"], branch = "polkadot-v0.9.37"  }


# Local Dependencies
pallet-template = { path = "../../../../../pallets/template", default-features = false }
pallet-detrade = { path = "../../../../../pallets/finance/detrade", default-features = false }

#pallet-contracts = { path = "../../../../../pallets/primitives/contracts", default-features = false }
#pallet-contracts-primitives = { path = "../../../../../pallets/primitives/contracts/primitives",  default-features = false }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false, branch = "polkadot-v0.9.37" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false, branch = "polkadot-v0.9.37" }

# used by DID
pallet-session = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-authorship = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

pallet-utility = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-proxy = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}
pallet-indices = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}


# did pallets 
 attestation = {path = "../../../../../pallets/primitives/attestation", default-features = false}
 ctype = {path = "../../../../../pallets/primitives/ctype", default-features = false}
 delegation = {path = "../../../../../pallets/primitives/delegation", default-features = false}
 did = {path = "../../../../../pallets/primitives/did", default-features = false}
 pallet-did-lookup = {path = "../../../../../pallets/primitives/pallet-did-lookup", default-features = false}
 pallet-web3-names = {path = "../../../../../pallets/primitives/pallet-web3-names", default-features = false}
 public-credentials = {path = "../../../../../pallets/primitives/public-credentials", default-features = false}




# did internal support 
 kilt-support = {path = "../../../../../common/support", default-features = false}
 runtime-common = {path = "../../../../../common/runtime", default-features = false}
 kilt-runtime-api-did = {path = "../../../../../common/runtime-api/did", default-features = false}

 kilt-runtime-api-public-credentials = {path = "../../../../../common/runtime-api/public-credentials", default-features = false}



[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", "branch" = "polkadot-v0.9.37" }

[features]
default = ["std"]





std = [
	
 "frame-benchmarking?/std",
 "log/std",

  "attestation/std",
  "ctype/std",
  "delegation/std",
  "did/std",
  "kilt-runtime-api-did/std",
  "kilt-runtime-api-public-credentials/std",
  "kilt-support/std",
  

  "pallet-did-lookup/std",
  "pallet-web3-names/std",
  "public-credentials/std",
  "runtime-common/std",

  "codec/std",
   "pallet-authorship/std",
  "pallet-indices/std",
  "pallet-proxy/std",
  "pallet-session/std",
  "pallet-utility/std",
 

	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-assets/std",
	"pallet-assets-chain-extension/substrate-std",


]


runtime-benchmarks = [
  "attestation/runtime-benchmarks",
  "ctype/runtime-benchmarks",
  "delegation/runtime-benchmarks",
  "did/runtime-benchmarks",
  "runtime-common/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "pallet-did-lookup/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-web3-names/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "public-credentials/runtime-benchmarks",

	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
  "attestation/try-runtime",
  "delegation/try-runtime",
  "ctype/try-runtime",
  "did/try-runtime",
  "kilt-support/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-did-lookup/try-runtime",
  "pallet-indices/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-session/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-web3-names/try-runtime",
  "pallet-utility/try-runtime",
  "runtime-common/try-runtime",

	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-template/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
